hphp/hack/test/typecheck/reactive/lambda_rx2.php.exp
File "lambda_rx2.php", line 13, characters 5-7:
Reactive functions can only call other reactive functions. (Typing[4200])
  File "lambda_rx2.php", line 5, characters 10-10:
  This function is shallow reactive.
